<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="#FFFF00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:text="@string/registerr"
            android:textSize="30sp"
            android:textAlignment="center"
            />

        <EditText
            android:textColor="#FFFAFA"
            android:textColorHint="#FFFAFA"
            android:id="@+id/namedat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/nama"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/alamat"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="#FFFAFA"
            android:textColorHint="#FFFAFA"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="#FFFAFA"
            android:textColorHint="#FFFAFA"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="#FFFAFA"
            android:textColorHint="#FFFAFA"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/btn_tmbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/registerr" />
    </LinearLayout>
</LinearLayout>